<resources>
    <string name="app_name">GymClub</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_account">Already Registered? Sign In</string>
    <string name="create_new_account">Don\'t have an account? Sign Up</string>
    <string name="create_plan">Create New Plan</string>
    <string name="email">E-mail Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="add_workout">New Workout</string>
    <string name="delete_workout">Delete Plan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- my -->
    <string name="wrong_credentials_exception">Invalid credentials</string>
    <string name="different_passwords">The inserted passwords are different</string>
    <string name="delete_plan_confirmation">Are you sure you want to delete this plan?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="clone_plan_confirmation">Are you sure you want to clone this plan?</string>
    <string name="settings_name">Username</string>
    <string name="display_plans">Display plans</string>
    <string name="click_here">Click Here</string>
    <string name="add_set">New Set</string>
    <string name="exercises">Exercises</string>
    <string name="weight">Weight</string>
    <string name="reps">Repetitions</string>
    <string name="chooseWorkout">Choose one workout</string>
    <string name="logout">Logout</string>
    <string name="startSession">Start Session</string>
    <string name="add_plan">New plan</string>
    <string name="loginButton">Sign in</string>
    <string name="register">Don’t have an account?</string>
    <string name="signUp">Sign Up</string>
    <string name="create">Create new account</string>
    <string name="Cpassword">Confirm Password</string>
    <string name="registerButton">Sign Up</string>
    <string name="name">Name</string>
    <string name="descricao">Description</string>
    <string name="exercise1">Exercise 1</string>
    <string name="exercise2">Exercise 2</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="update_exercise">Update Exercise</string>
    <string name="SetoneExercise">Set one exercise</string>
    <string name="rep">Repetitions</string>
    <string name="update_set">Update Session</string>
    <string name="choose_workout">Choose one workout</string>
    <string name="start_session">Start Session</string>
    <string name="currentSets">Current Sets</string>
    <string name="premiumTier">Premium User</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="gyms">Gyms</string>
    <string name="public_plans">Public plans</string>
    <string name="workouts">Workouts</string>
    <string name="sets">Sets</string>
    <string name="user_registered">User registered successfully</string>
</resources>