<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.workouts.AddWorkoutFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:textSize="30sp"
        android:text="@string/add_workout"
        android:textStyle="bold"
        android:textColor="#212121"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/Name"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:hint="@string/name"
        android:textColor="#9E9E9E"
        android:background="@drawable/shape"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/descricao"
        android:layout_width="270dp"
        android:layout_height="100dp"
        android:layout_marginTop="170dp"
        android:hint="@string/descricao"
        android:textColor="#9E9E9E"
        android:background="@drawable/shape"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <Button
        android:id="@+id/addExerciseButton"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginTop="568dp"
        android:background="@drawable/shape"
        android:text="@string/add_workout"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>

