<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.plans.PlansFragment">


    <TextView
        android:id="@+id/myPlans5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="My Plans"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPFP4" />

    <ImageButton
        android:id="@+id/definitions4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:background="@drawable/ic_definitions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/usernameTextView" />

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/settings_name"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="15dp"
        app:layout_constraintStart_toEndOf="@+id/imageViewPFP4"
        app:layout_constraintTop_toTopOf="@+id/imageViewPFP4" />

    <TextView
        android:id="@+id/altTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/premiumTier"
        android:textColor="@color/gold"
        android:textSize="10dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/usernameTextView"
        app:layout_constraintTop_toBottomOf="@+id/usernameTextView" />

    <ImageView
        android:id="@+id/imageViewPFP4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_recycler_view"
        android:layout_width="wrap_content"
        android:layout_height="400dp"

        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myPlans5" />

    <com.google.android.material.button.MaterialButton

        android:id="@+id/add_workout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="24dp"
        android:text="@string/add_plan"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>