<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imageViewPFPSettings"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewProfileDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/settings_name"
        android:textStyle="bold"
        android:textSize="15dp"
        app:layout_constraintStart_toEndOf="@+id/imageViewPFPSettings"
        app:layout_constraintTop_toTopOf="@+id/imageViewPFPSettings" />

    <TextView
        android:id="@+id/altTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/premiumTier"
        android:textColor="@color/gold"
        android:textSize="10dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textViewProfileDisplay"
        app:layout_constraintTop_toBottomOf="@+id/textViewProfileDisplay" />

    <ImageView
        android:id="@+id/profileicon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/ic_pfp_icon"
        app:layout_constraintStart_toStartOf="@+id/imageViewPFPSettings"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPFPSettings" />


    <TextView
        android:id="@+id/textViewProfileSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="Profile"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/profileicon"
        app:layout_constraintStart_toEndOf="@+id/profileicon"
        app:layout_constraintTop_toTopOf="@+id/profileicon"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/arrow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:background="@drawable/ic_arrow_icon"
        app:layout_constraintBottom_toBottomOf="@+id/textViewProfileSettings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewProfileSettings" />

    <ImageView
        android:id="@+id/securityIcon"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_security_icon"
        app:layout_constraintStart_toStartOf="@+id/profileicon"
        app:layout_constraintTop_toBottomOf="@+id/profileicon" />


    <TextView
        android:id="@+id/textViewSecuritySettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="Security"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/securityIcon"
        app:layout_constraintStart_toEndOf="@+id/securityIcon"
        app:layout_constraintTop_toTopOf="@+id/securityIcon" />

    <ImageButton
        android:id="@+id/arrow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:background="@drawable/ic_arrow_icon"
        app:layout_constraintBottom_toBottomOf="@+id/textViewSecuritySettings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewSecuritySettings" />

    <ImageView
        android:id="@+id/languageIcon"
        android:layout_width="24dp"
        android:layout_height="23dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_flag_icon"
        app:layout_constraintStart_toStartOf="@+id/securityIcon"
        app:layout_constraintTop_toBottomOf="@+id/securityIcon" />

    <TextView
        android:id="@+id/textViewLanguageSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="Languages"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/languageIcon"
        app:layout_constraintStart_toEndOf="@+id/languageIcon"
        app:layout_constraintTop_toTopOf="@+id/languageIcon" />


    <ImageButton
        android:id="@+id/arrow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:background="@drawable/ic_arrow_icon"
        app:layout_constraintBottom_toBottomOf="@+id/textViewLanguageSettings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewLanguageSettings" />

    <Button
        android:id="@+id/button2"
        android:layout_width="700px"
        android:layout_height="40dp"
        android:background="@drawable/ic_button"
        android:text="@string/logout"
        android:textColor="@color/white"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.887" />

</androidx.constraintlayout.widget.ConstraintLayout>